# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: gendiff.py  parsing.py  tree.py  types.py
gendiff/scripts/: gendiff.py
gendiff/views/: __init__.py  json.py  plain.py  stylish.py
tests/: fixture_paths.py  test_json_diff.py  test_plain_diff.py  test_stylish_diff.py
