[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My second project"
authors = ["DaniilIslamgaliev <dante9226@mail.ru>"]
readme = "README.md"
repository = "https://github.com/DLineX/python-project-50"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
